--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: /starter
 permalink: pretty
-markdown: rdiscount
+markdown: redcarpet
 prose:
   rooturl: '_posts'
   siteurl: 'http://www.jenesis.io/starter/'
