--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 baseurl: /starter
 permalink: pretty
 markdown: kramdown
+  input: GFM
 prose:
   rooturl: '_posts'
   siteurl: 'http://www.jenesis.io/starter/'
