--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 baseurl: /starter
 permalink: pretty
 markdown: kramdown
+  markdown_ext:  markdown,mkdown,mkdn,mkd,md
+  textile_ext:   textile
+  excerpt_separator: "\n\n"
 kramdown:
   input: GFM
   use_coderay: true
