--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ markdown: kramdown
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
 textile_ext:   textile
 excerpt_separator: "\n\n"
+pygments: true
 kramdown:
   input: GFM
   auto_ids: true
